# RudraKernel

./: IMPLEMENTATION_PLAN.md  README.md  RudraKernel_TechBrief.md  SIEGE_BLUEPRINT.md  implementation_audit.md.resolved  openenv.yaml  submission_checklist.md.resolved
RudraKernel-src/: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  Dockerfile.api.bak  Dockerfile.training  LICENSE  Makefile  README.md  SUBMISSION.md  docker-compose.yml  mypy.ini  pyproject.toml
RudraKernel-src/.agents/: CLAUDE.md
RudraKernel-src/.github/workflows/: ci.yml  deploy.yml  nightly.yml
RudraKernel-src/artifacts/: ablation_plan.json
RudraKernel-src/artifacts/training/: base_checkpoint.json  base_metrics.json
RudraKernel-src/brain/: CHANGELOG.md  CONTEXT.md  DECISIONS.md  HANDOFF.md  MASTER_CODE.md  ROADMAP_STATUS.md
RudraKernel-src/brain/snapshots/: step_00_2026-04-24T15-22-57+00-00.json  step_01_2026-04-24T16-50-25+00-00.json  step_02_2026-04-24T17-15-15.547190+00-00.json  step_03_2026-04-24T17-23-28.680251+00-00.json  step_04_2026-04-24T17-53-09.224603+00-00.json  step_13_2026-04-24T19-30-34Z.json  (+20 more)
RudraKernel-src/docs/: ABLATION_RESULTS.md  ARCHITECTURE.md  BLOG.md  HYBRID_PLAN_NOTES.md  PITCH.md  README.md  REWARD_HACKING_AUDIT.md  VIDEO_SCRIPT.md  generate_plots.py  hf_blog_post.md
RudraKernel-src/frontend/: app.py  data_adapter.py  tab_config.py
RudraKernel-src/frontend 2/: app.py  data_adapter.py  requirements.txt
RudraKernel-src/frontend.old.bak/: app.py
RudraKernel-src/scripts/: deploy_hf.sh  deploy_training_space.sh  generate_ablations.sh  generate_step23_plots.py  paired_eval.py  run_all_tests.sh  run_training_a100.sh  setup_dev.sh  vulnerability_sweep.py
RudraKernel-src/siege_env/: __init__.py  client.py
RudraKernel-src/tests/: __init__.py  conftest.py  master_suite.py
RudraKernel-src/training/: GRPO_COLAB_GUIDE.md  README.md  SIEGE_GRPO_Demo.ipynb  ablation.py  colab_notebook.ipynb  grpo_train.py  grpo_train_unsloth.py  heldout_split.py  run_training_with_status.py  scdfvd.ipynb  wandb_config.py
(+129 files in other folders)
