[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siege-env"
version = "0.1.0"
description = "SIEGE environment for OpenEnv India 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "gradio>=4.39.0",
  "openenv>=0.1.0",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pyyaml>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"siege_env/rewards/aggregator.py" = ["F811"]
"siege_env/server/siege_environment.py" = ["F811"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["arg-type", "call-arg", "call-overload", "method-assign", "no-redef", "union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
